--- a/members.html
+++ b/members.html
@@ -29,53 +29,53 @@
                 <h2>Основные участники проекта</h2>
                 <div class="member-list">
                     <div class="member-card">
-                        <img src="fotos/4.jpg" alt="Сурин Павел Андреевич" class="member-photo">
+                        <img src="4.jpg" alt="Сурин Павел Андреевич" class="member-photo">
                         <h3>Зайнидинов Абдухамид</h3>
                         <p>Роль: Руководитель проекта, отвечает за общую координацию и организацию работы команды.</p>
                     </div>
                     <div class="member-card">
-                        <img src="fotos/14.jpg" alt="Таалайбек кызы Сезим" class="member-photo">
+                        <img src="14.jpg" alt="Таалайбек кызы Сезим" class="member-photo">
                         <h3>Таалайбек кызы Сезим</h3>
                         <p>Роль: Разработчик, занимается кодированием и архитектурой программного решения.</p>
                     </div>
                     <div class="member-card">
-                        <img src="fotos/3.jpg" alt="Хачатурян Тигран Оганесович" class="member-photo">
+                        <img src="3.jpg" alt="Хачатурян Тигран Оганесович" class="member-photo">
                         <h3>Хачатурян Тигран Оганесович</h3>
                         <p>Роль: Тестировщик, отвечает за проверку качества работы программы и анализ ошибок.</p>
                     </div>
                     <div class="member-card">
-                        <img src="fotos/5.jpg" alt="Зайнидинов Абдухамид" class="member-photo">
+                        <img src="5.jpg" alt="Зайнидинов Абдухамид" class="member-photo">
                         <h3>Чакыр Джемиле</h3>
                         <p>Роль: Специалист по UX/UI, работает над улучшением пользовательского интерфейса системы.</p>
                     </div>
                     <div class="member-card">
-                        <img src="fotos/11.jpg" alt="Шагаев Темирлан Тимурович" class="member-photo">
+                        <img src="11.jpg" alt="Шагаев Темирлан Тимурович" class="member-photo">
                         <h3>Шагаев Темирлан Тимурович</h3>
                         <p>Роль: Программист, разрабатывает серверную часть и обеспечивает функциональность.</p>
                     </div>
                     <div class="member-card">
-                        <img src="fotos/6.jpg" alt="Шерфединов Руслан Ренатович" class="member-photo">
+                        <img src="6.jpg" alt="Шерфединов Руслан Ренатович" class="member-photo">
                         <h3>Шерфединов Руслан Ренатович</h3>
                         <p>Роль: Разработчик, отвечает за интеграцию различных систем и взаимодействие с базой данных.</p>
                     </div>
                     <div class="member-card">
-                        <img src="fotos/7.jpg" alt="Шувалов Дмитрий Игоревич" class="member-photo">
+                        <img src="7.jpg" alt="Шувалов Дмитрий Игоревич" class="member-photo">
                         <h3>Шувалов Дмитрий Игоревич</h3>
                         <p>Роль: Специалист по безопасности, работает над безопасностью данных и защиты системы.</p>
                     </div>
                     <div class="member-card">
-                        <img src="fotos/12.jpg" alt="Юлдашева Валерия Ёдгоржоновна" class="member-photo">
+                        <img src="12.jpg" alt="Юлдашева Валерия Ёдгоржоновна" class="member-photo">
                         <h3>Юлдашева Валерия Ёдгоржоновна</h3>
                         <p>Роль: Аналитик, занимается исследованием и анализом данных анкетирования.</p>
                     </div>
                     <!-- Добавленные участники -->
                     <div class="member-card">
-                        <img src="fotos/15.jpg" alt="Желтоноженко Оксана Олеговна" class="member-photo">
+                        <img src="15.jpg" alt="Желтоноженко Оксана Олеговна" class="member-photo">
                         <h3>Желтоноженко Оксана Олеговна</h3>
                         <p>Роль: Специалист по аналитике, работает над анализом собранных данных и их представлением.</p>
                     </div>
                     <div class="member-card">
-                        <img src="fotos/10.jpg" alt="Журавлев Кирилл Дмитриевич" class="member-photo">
+                        <img src="10.jpg" alt="Журавлев Кирилл Дмитриевич" class="member-photo">
                         <h3>Журавлев Кирилл Дмитриевич</h3>
                         <p>Роль: Разработчик, занимается программированием и поддержанием базы данных проекта.</p>
                     </div>
@@ -85,7 +85,7 @@
             <section class="curator">
                 <h2>Куратор проекта</h2>
                 <div class="curator-card">
-                    <img src="fotos/13.jpg" alt="Воробьев Никита Григорьевич" class="member-photo">
+                    <img src="13.jpg" alt="Воробьев Никита Григорьевич" class="member-photo">
                     <h3>Воробьев Никита Григорьевич</h3>
                     <p>Роль: Куратор проекта, оказывает методологическую и организационную поддержку проекту.</p>
                 </div>
